tests/samples/invalid/return_array_by_value.pn

fn foo() -> [10]i32
{
	return: [0i32, 0, 0, 0, 0, 0, 0, 0, 0, 0]
}
